--- a/public/partials/formula.html
+++ b/public/partials/formula.html
@@ -26,7 +26,17 @@
 			</div>
 		</div>
 		<br />
-		
+
+		<div class="col-md-12" ng-if="procedimientos.length > 0">
+			<h4><span class="label label-primary"><i class="fa fa-pie-chart"></i> Procedimientos</span></h4>
+			<div ng-drop="true" class="drag-indicador">
+				<div ng-repeat="obj in procedimientos" ng-drag="true" ng-drag-data="obj">
+					{{obj.texto}}
+				</div>
+			</div>
+			<br />
+		</div>
+
 		<h4><span class="label label-primary"><i class="fa fa-calculator"></i> Fórmula</span></h4>
 		<div class="row">
 			<div class="col-xs-2 drag-formula" ng-repeat="obj in formulaObjects track by $index" ng-drop="true" ng-drop-success="onDropFormula($index, $data, $event)">
