--- a/public/partials/entidadobjeto.html
+++ b/public/partials/entidadobjeto.html
@@ -2,6 +2,9 @@
 	<div class="col-lg-12">
 		<div style="clear:both" class="table-responsive">
 			<h3>Entidades objeto</h3>
+			<div class="hidden-print col-sm-12 text-center">
+				<span class="btn btn-primary" ng-click="newCarta()">Registar una nueva carta de compromisos</span>
+			</div>
 			<table class="table table-striped table-hover hidden-print" ng-If="$root.permisoscalculados.superuser">
 				<caption>
 					<div class="pull-right">
@@ -22,31 +25,37 @@
 						<td class="text-center" colspan="{{(entidades[0] | keylength) + 1 }}">Nº de registros mostrados: <strong>{{entidades.length}}</strong></td>
 					</tr>
 				</tfoot>
-				<tbody ng-repeat="entidadobjeto in entidades | filter:filtro">
+				<tbody ng-repeat="entidadobjeto in entidades | orderBy:'denominacion' | filter:filtro">
 					<tr ng-class="{'danger': getCount(entidadobjeto._id) === 0 }">
-							<th>{{entidadobjeto._id}}<br />
-								{{entidadobjeto.denominacion}}
-								<br /><hr />
-								{{ jerarquias ['' + entidadobjeto.idjerarquia].nombrelargo }}
-								<hr />
+						<th>{{entidadobjeto._id}}<br />
+							{{entidadobjeto.denominacion}}
+							<br /><hr />
+							{{ jerarquias ['' + entidadobjeto.idjerarquia].nombrelargo }}
+							<hr />
 							<p class="text-center">
 								<a href="/carta/{{entidadobjeto.idjerarquia}}" class="btn btn-default btn-xs" target="_blank">
 									<span class="fa fa-eye"></span>
 								</a>
-								<a class="btn btn-default btn-xs" target="_blank" href="/carta-printable/{{entidadobjeto.idjerarquia}}/{{entidadobjeto._id}}" title="Ver versi&oacute;n imprimible"><span class="glyphicon glyphicon-print"></span></a>
+								<a class="btn btn-default btn-xs" target="_blank" href="/carta-printable/{{entidadobjeto.idjerarquia}}/{{entidadobjeto._id}}" title="Ver versi&oacute;n imprimible">
+									<span class="glyphicon glyphicon-print"></span>
+								</a>
 								<a href="{{entidadobjeto.url}}" class="btn btn-default btn-xs" target="_blank">
 									<span class="fa fa-external-link"></span>
 								</a>
-								<span class="btn btn-primary btn-xs">
-									<span class="fa fa-arrow-down cursor" ng-click="download(entidadobjeto)"></span>
+								<span class="btn btn-primary btn-xs" ng-click="entidadobjeto.$editar = !entidadobjeto.$editar">
+									<span class="fa fa-pencil cursor"></span>
 								</span>
-								<span class="btn btn-danger btn-xs">
-									<span class="fa fa-trash cursor" ng-click="dropCarta(entidadobjeto)"></span>
+								<span class="btn btn-primary btn-xs" ng-click="download(entidadobjeto)">
+									<span class="fa fa-arrow-down cursor"></span>
+								</span>
+								<span class="btn btn-danger btn-xs" ng-click="dropCarta(entidadobjeto)">
+									<span class="fa fa-trash cursor"></span>
 								</span>
 							</p>
 						</th>
 						<td ng-If="clave!='_id'" ng-repeat="(clave, valor) in entidades[0]" style="overflow:auto; max-width:200px">
-							<input class="form-control" type="text" style="width:100%; font-size:smaller;" ng-model="entidadobjeto[clave]" ng-blur="actualizar(entidadobjeto, clave)" />
+							<input ng-if="entidadobjeto.$editar" class="form-control" type="text" style="width:100%; font-size:smaller;" ng-model="entidadobjeto[clave]" ng-blur="actualizar(entidadobjeto, clave)" />
+							<span ng-if="!entidadobjeto.$editar">{{entidadobjeto[clave].toString().split('&').join(' &') }}</span>
 						</td>
 						<td class="text-right">
 							{{ getCount(entidadobjeto._id) }}
@@ -57,6 +66,7 @@
 					</tr>
 				</tbody>
 			</table>
+
 			<div class="visible-print-block">
 				<table class="table table-striped table-condensed">
 					<tbody>
