--- a/public/partials/upload.html
+++ b/public/partials/upload.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
         <!--[if lt IE 9]>
 				<p style="margin-top:1em;">
-					<div class="alert alert-warning" role="alert">Esta usted utilizando una versión de Internet Explorer <strong>obsoleta</strong>. Actualmente esta funcionalidad <strong>no está disponible para su navegador</strong>. 
+					<div class="alert alert-warning" role="alert">Esta usted utilizando una versión de Internet Explorer <strong>obsoleta</strong>. Actualmente esta funcionalidad <strong>no está disponible para su navegador</strong>.
 		  Actualice el navegador a la versión más reciente o instale <strong><a target="_blank" href="https://www.google.es/chrome/browser/index.html">Chrome</a></strong> o <strong><a target="_blank" href="http://getfirefox.com/">Firefox</a></strong>.</div>
 				</p>
 		<![endif]-->
@@ -10,12 +10,10 @@
 			Desde este apartado puede proceder a la carga masiva de datos según el formato acordado. Para ello puede arrastrar uno o varios ficheros a la caja mostrada.<br />Descargar ejemplos:
 		</p>
 		<p class="text-center">
-
 			<a class="btn btn-default" target="_blank" href="/files/ej_carga_cabecera.csv">Ejemplo 1</a>
 			<a class="btn btn-default" target="_blank" href="/files/ej_carga_sin_cabecera.csv">Ejemplo 2</a>
 			<a class="btn btn-default" target="_blank" href="/files/ej_carga_sin_cabecera_error.csv">Ejemplo 3</a>
 			<a class="btn btn-default" target="_blank" href="/files/ej_carga_sin_cabecera_ok.csv">Ejemplo 4</a>
-			
 		</p>
 		<div class="text-center">
 			<img src="imgs/ejemplofichero.png"/>
@@ -23,10 +21,10 @@
 			{{respuestas.length}} ficheros cargados
 		</div>
 		<hr/>
-		<div ng-file-drop ng-model="files" class="drop-box" ng-file-drag-over-class="drop-boxover" multiple="true" ng-show="dropSupported" class="drop-box">
+		<div ngf-drop ng-model="files" class="drop-box" ngf-drag-over-class="drop-boxover" multiple="true" ng-show="dropSupported" class="drop-box">
 			Arrastra tus ficheros aquí
 		</div>
-		<div ng-file-drop-available="dropSupported=true" ng-show="!dropSupported">
+		<div ngf-drop-available="dropSupported=true" ng-show="!dropSupported">
 			Debes utilizar un navegador más actualizado, que permita arrastrar y soltar.
 		</div>
 		<button ng-If="actualizando" ng-click="upload.abort()">Cancelar subida</button>
