--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -56,7 +56,7 @@
 					</tr>
 				</tfoot>
 				<tbody>
-					<tr ng-repeat="objetivo in objetivos" ng-style="{'background-color': getPastel(objetivo.index) }">
+					<tr ng-repeat="objetivo in objetivos" ng-style="{'background-color': getPastel(objetivo.index) }" ng-init="indexobjetivo=$index">
 						<th class="text-center">
 							<p>{{objetivo.index}}</p>
 							<div class="btn-group-vertical" role="group">
@@ -78,7 +78,7 @@
 							<p>{{objetivo.denominacion}}</p>
 							<table class="table table-striped table-bordered table-condensed table-hover">
 								<tbody>
-									<tr ng-repeat="formula in objetivo.formulas track by $index">
+									<tr ng-repeat="formula in objetivo.formulas track by $index" ng-init="indexformula=$index">
 										<td style="width:85%">
 											<p><strong>{{formula.human}}</strong></p>
 											<table class="table table-striped table-bordered table-condensed" style="width:100%">
@@ -170,19 +170,16 @@
 												</tbody>
 											</table>
 										</td>
-										<td style="text-align:center">
-											<div width="10em" major-graduations="{{formula.uppervalue < 5 ? formula.uppervalue + 1 : 5}}" ng-radial-gauge ranges="formula.intervalos" value="formula.gaugevalue[aanualidad]" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.uppervalue"></div>
-											<!--
-											<canvas data-gauge-chart maxvalue="100" dato="gaugeChart[objetivo.i].data" value="gaugeChart[objetivo.i].data.val" data-options="gaugeChart[objetivo.i].options" style="width: 120px; height: 60px; " class=""></canvas>
-											{{gaugeChart[objetivo.i].data.val}}
-											Gauge:{{formula.gaugevalue[aanualidad]}}
-											{{formula.uppervalue}} {{formula.intervalos|json}}
-											-->
+										<td style="text-align:center" class="gaugecell">
+											<div width="300" style="height:225px" major-graduations="{{formula.uppervalue < 5 ? formula.uppervalue + 1 : 5}}" ng-radial-gauge ranges="formula.intervalos" value="formula.gaugevalue[aanualidad]" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.uppervalue" id="img{{indexobjetivo}}_{{indexformula}}"></div>
 											<br />
 											<br />
 											<h4>{{ formula.valores[aanualidad][ formula.valores[aanualidad].length - 1 ].resultado | number:($root.isInt(formula.valores[aanualidad][ formula.valores[aanualidad].length - 1 ].resultado) ? 0 : 2)  }}</h4>
 											<h4 style="color:red" ng-show="showformulas">{{formula.valor[aanualidad] | number:($root.isInt(formula.valor[aanualidad]) ? 0 : 2)  }}</h4>
 											<h5>{{ formula.meta | number:($root.isInt(formula.valor[aanualidad]) ? 0 : 2) }}</h5>
+											<div class="hidden-print text-center">
+												<button class="btn btn-default" svg-download="#img{{indexobjetivo}}_{{indexformula}}" title="{{indexobjetivo}}_{{indexformula}}" type="png">Descargar imagen</button>
+											</div>
 										</td>
 									</tr>
 								</tbody>
@@ -210,4 +207,6 @@
 {
 	-webkit-print-color-adjust: exact;
 }
+.gaugecell button { display: none; }
+.gaugecell:hover button { display: inline; }
 </style>
