--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -168,7 +168,8 @@
 															{{a}}
 														</td>
 														<td class="text-right">
-															 {{ procedimientos[procedimiento.procedimiento].periodos[aanualidad][procedimiento.campo] | sum }}
+															<span>∑</span>
+															{{ procedimientos[procedimiento.procedimiento].periodos[aanualidad][procedimiento.campo] | sum }}
 														</td>
 													</tr>
 												</tbody>
