--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -169,7 +169,7 @@
 														</td>
 														<td class="text-right">
 															<span>∑</span>
-															{{ procedimientos[procedimiento.procedimiento].periodos[aanualidad][procedimiento.campo] | sum }}
+															= {{ procedimientos[procedimiento.procedimiento].periodos[aanualidad][procedimiento.campo] | sum }}
 														</td>
 													</tr>
 												</tbody>
