--- a/public/partials/indicador.html
+++ b/public/partials/indicador.html
@@ -5,20 +5,22 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div style="clear:both" class="table-responsive">
-			<table class="table table-striped">
+			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
+						<th style="width: 10%">ID</th>
 						<th>Nombre</th>
-						<th>REST URL</th>
+						<th style="width: 10%">REST URL</th>
 						<th>Frecuencia</th>
 						<th>Acumulador</th>
+						<th>Usos</th>
 						<th>Operaciones</th>
 					</tr>
 				</thead>
 				<tfoot>
 					<tr>
 						<th><br />Nuevo indicador</th>
-						<td colspan="3">
+						<td colspan="5">
 							<input ng-model="nuevo.nombre" class="form-control" />
 						</td>
 						<td>
@@ -30,8 +32,11 @@
 				</tfoot>
 				<tbody>
 					<tr ng-repeat="indicador in indicadores" ng-class="{'danger' :  indicador._id == idindicador}">
+						<th>
+							<span class="small">{{indicador._id}}</span>
+						</th>
 						<td>
-							<input ng-model="indicador.nombre" class="form-control" />
+							<input ng-model="indicador.nombre" class="form-control small" />
 						</td>
 						<td>
 							<input ng-model="indicador.resturl" class="form-control" />
@@ -41,6 +46,9 @@
 						</td>
 						<td>
 							<select ng-model="indicador.acumulador" ng-options="func.value as func.name for func in functions" class="form-control"></select>
+						</td>
+						<td class="text-right">
+							<span>{{usosIndicadores[ indicador._id] }}</span>
 						</td>
 						<td>
 							<button ng-click="actualizar(indicador)" class="btn btn-sm btn-primary" title="Actualizar">
